mobile overflow fix

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -71,7 +71,7 @@
   
 
   .heroLeft {
-    margin-top: 250px;
+    margin-top: 150px;
     flex: 1;
   }
 
